Use overflow-y to prevent a horizontal scrollbar and use flex auto property for a better readability.

--- a/src/assets/patterns/molecules/artboards/css/artboards.css
+++ b/src/assets/patterns/molecules/artboards/css/artboards.css
@@ -76,8 +76,8 @@
 }
 
 .m-artboards__list {
-    flex: 1 1;
-    overflow: scroll;
+    flex: auto;
+    overflow-y: scroll;
 }
 
 .m-artboards__item {
